--- a/modify/css/bootstrap.css
+++ b/modify/css/bootstrap.css
@@ -385,7 +385,7 @@ img{vertical-align:middle}
 .carousel-inner>.item>img,
 .img-responsive,
 .thumbnail a>img,
-.thumbnail>img{display:block;max-width:100%;height:auto}
+.thumbnail>img{display:block;max-width:100%;height:auto;margin-left:auto;margin-right:auto;}
 .img-rounded{border-radius:6px}
 .img-thumbnail{display:inline-block;max-width:100%;height:auto;padding:4px;line-height:1.42857143;background-color:#fff;border:1px solid #ddd;border-radius:4px;-webkit-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;transition:all .2s ease-in-out}
 .img-circle{border-radius:50%}
