--- a/modify/style.css
+++ b/modify/style.css
@@ -228,7 +228,7 @@ h4{color:#333333!important;}
 .bgc-white{background-color:#FFFFFF;}
 .bgc-dark-slate-blue{background-color:#364577;}
 .bgc-atomic-tangerine{background-color:#F3976C;}
-.tc-white{color:#F3976C!important;}
+.tc-white{color:#FAE3D6!important;}
 .btn-atomic-tangerine{background:#F3976C;}
 .btn-atomic-tangerine:hover{background:#c27956!important;color:#FFFFFF!important;}
 .ltc-white{color:#FFFFFF!important;}
