--- a/modify/style.css
+++ b/modify/style.css
@@ -229,7 +229,7 @@ h4{color:#333333!important;}
 .bgc-dark-slate-blue{background-color:#364577;}
 .bgc-atomic-tangerine{background-color:#F3976C;}
 .tc-white{color:#FAE3D6!important;}
-.btn-atomic-tangerine{background:#F3976C;}
+.btn-atomic-tangerine{background:#F3976C;color:#171717!important}
 .btn-atomic-tangerine:hover{background:#c27956!important;color:#FFFFFF!important;}
 .ltc-white{color:#FFFFFF!important;}
 .ltc-white:hover{color:#cccccc!important;}
