--- a/modify/style.css
+++ b/modify/style.css
@@ -3,7 +3,7 @@ a,
 button{transition:all .3s ease-in-out;outline:none!important;}
 a:hover{text-decoration:none;cursor:pointer;}
 #page-loading-blocs-notifaction{position:fixed;top:0;bottom:0;width:100%;z-index:100000;background:#FFFFFF url("img/pageload-spinner.gif") no-repeat center center;}
-.bloc{width:100%;clear:both;background:50% 50% no-repeat;padding:0 50px;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;position:relative;}
+.bloc{clear:both;background:50% 50% no-repeat;padding:0 50px;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;position:relative;}
 .bloc .container{padding-left:0;padding-right:0;}
 .bloc-lg{padding:100px 50px;}
 .bloc-md{padding:50px;}
@@ -127,7 +127,7 @@ a:hover{text-decoration:none;cursor:pointer;}
 .navbar-brand img{max-height:200px;margin:0 5px 0 0;display:inline;}
 .navbar-brand img[src$=svg]{min-width:100px;}
 .nav-center .navbar-brand img{margin:0;}
-.navbar .nav{padding-top:2px;margin-right:-16px;float:right;z-index:1;}
+.navbar .nav{padding-top:2px;float:right;z-index:1;}
 .nav > li{float:left;margin-top:4px;font-size:16px;}
 .navbar-nav .open .dropdown-menu > li > a{text-align:inherit;}
 .nav > li a:hover,
